# weekly-report

./: .editorconfig  .eslintrc.json  .gitignore  ISSUE_TEMPLATE.md  code-of-conduct.md  package-lock.json  package.json  readme.md
rust-study/amethyst_example/: Cargo.toml  README.md
rust-study/amethyst_example/assets/prefab/: animation.ron  renderable.ron
rust-study/amethyst_example/config/: display.ron  display_qbit.ron
rust-study/amethyst_example/examples/custom_game_data/: example_system.rs  game_data.rs  main.rs  system.rs
rust-study/amethyst_example/examples/simple_state/: main.rs
rust-study/amethyst_example/examples/state/: main.rs
rust-study/amethyst_example/examples/window/: main.rs
rust-study/amethyst_example/src/: example_system.rs  game_data.rs  main.rs  utils.rs
rust-study/amethyst_example/src/examples/: empty_state.rs  mod.rs
rust-study/amethyst_example/src_all_api/: main.rs
rust-study/amethyst_example/src_all_api/examples/: simple_state.rs
rust-study/amethyst_example/src_qbit/: main.rs
rust-study/programming/: Cargo.toml  main.rs
rust-study/programming/add/: Cargo.toml
rust-study/programming/add/add-one/: Cargo.toml
rust-study/programming/add/adder/: Cargo.toml
rust-study/programming/data/: hello.txt
rust-study/programming/hello_macro/: Cargo.toml
rust-study/programming/hello_macro/src/: lib.rs
rust-study/programming/hello_macro_derive/: Cargo.toml
rust-study/programming/hello_macro_derive/src/: lib.rs
rust-study/programming/src/: adder.rs  advanced_function.rs  advanced_types.rs  array.rs  borrowing.rs  box_type.rs  closure.rs  data-types.rs  data_types.rs  deref.rs  drop.rs  enum_case.rs  function.rs  generics_syntax.rs  guessing_game.rs  hash_maps.rs  if_let.rs  iterators.rs  lib.rs  lifetime.rs  loop.rs  loop_case.rs  macros.rs  main.rs  match_case.rs  module_scope.rs  oo_design_patterns.rs  ownership.rs  panic_or_not.rs  patterns.rs  patterns_syntax.rs  performance.rs  pointer.rs  rc.rs  recoverable_errors.rs  rectangle.rs  refcell.rs  reference_cycles.rs  slice-type.rs  slice_type.rs  (+12 more)
rust-study/programming/src/lib_src/: adder.rs  advanced_lifetime.rs  advanced_traits.rs  averaged_collection.rs  greeting.rs  guess.rs  mod.rs  (+4 more)
rust-study/programming/tests/: integration_test.rs
(+213 files in other folders)
