[package]
name = "amethyst_example"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
serde = {version = "1.0.103", features = ["derive"]}

[dependencies.amethyst]
version = "0.13.2"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
