[package]
name = "amethyst_example"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
serde = {version = "1.0.103", features = ["derive"]}

[dependencies.amethyst]
version = "0.13.2"

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

[[example]]
name = "empty_state"
path = "examples/empty_state/main.rs"

[[example]]
name = "simple_state"
path = "examples/simple_state/main.rs"

[[example]]
name = "window"
path = "examples/window/main.rs"

[[example]]
name = "custom_game_data"
path = "examples/custom_game_data/main.rs"
