[package]
name = "main"
version = "0.1.0"
authors = ["ampcpmgp <ampcpmgp@gmail.com>"]
edition = "2018"

[dependencies]

[[bin]]
name = "ownership"
path = "src/ownership.rs"

[[bin]]
name = "loop"
path = "src/loop.rs"

[[bin]]
name = "function"
path = "src/function.rs"

[[bin]]
name = "array"
path = "src/array.rs"

[[bin]]
name = "tuple"
path = "src/tuple.rs"

[[bin]]
name = "data-types"
path = "src/data-types.rs"

[[bin]]
name = "pointer"
path = "src/pointer.rs"
